--- a/VisualCrypt.Desktop.ModuleEditor/Views/FindReplace.xaml
+++ b/VisualCrypt.Desktop.ModuleEditor/Views/FindReplace.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:VisualCrypt.Desktop.ModuleEditor.Views"
         mc:Ignorable="d"
         Title="Find" Height="236.5" Width="365" WindowStartupLocation="CenterOwner" d:DataContext="{d:DesignInstance views:FindReplaceViewModel}">
     <Grid>
