--- a/VisualCrypt.Desktop.ModuleEditor/Views/Editor.xaml
+++ b/VisualCrypt.Desktop.ModuleEditor/Views/Editor.xaml
@@ -1,56 +1,62 @@
 ﻿<UserControl x:Class="VisualCrypt.Desktop.ModuleEditor.Views.Editor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:commands="clr-namespace:VisualCrypt.Desktop.Shared.Commands;assembly=VisualCrypt.Desktop.Shared"
              xmlns:valueConverters="clr-namespace:VisualCrypt.Desktop.Shared.ValueConverters;assembly=VisualCrypt.Desktop.Shared"
              xmlns:state="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" 
+             mc:Ignorable="d"
+             d:DesignHeight="300" d:DesignWidth="300"
              VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
     <UserControl.Resources>
         <valueConverters:BoolTextWrappingConverter x:Key="BoolTextWrappingConverter" />
     </UserControl.Resources>
     <UserControl.CommandBindings>
-        <CommandBinding Command="commands:EditorCommands.Find"  CanExecute="CanExecuteFind" Executed="ExecuteFind"/>
-        <CommandBinding Command="commands:EditorCommands.FindNext"  CanExecute="CanExecuteFindNext" Executed="ExecuteFindNext"/>
-        <CommandBinding Command="commands:EditorCommands.FindPrevious"  CanExecute="CanExecuteFindPrevious" Executed="ExecuteFindPrevious"/>
-        <CommandBinding Command="commands:EditorCommands.Replace"  CanExecute="CanExecuteReplace" Executed="ExecuteReplace"/>
-        <CommandBinding Command="commands:EditorCommands.DeleteLine"  CanExecute="CanExecuteDeleteLine" Executed="ExecuteDeleteLine"/>
-        <CommandBinding Command="commands:EditorCommands.GoTo"  CanExecute="CanExecuteGoTo" Executed="ExecuteGoTo"/>
-        <CommandBinding Command="commands:EditorCommands.InsertDate"  CanExecute="CanExecuteInsertDate" Executed="ExecuteInsertDate"/>
+        <CommandBinding Command="commands:EditorCommands.Find" CanExecute="CanExecuteFind" Executed="ExecuteFind" />
+        <CommandBinding Command="commands:EditorCommands.FindNext" CanExecute="CanExecuteFindNext"
+                        Executed="ExecuteFindNext" />
+        <CommandBinding Command="commands:EditorCommands.FindPrevious" CanExecute="CanExecuteFindPrevious"
+                        Executed="ExecuteFindPrevious" />
+        <CommandBinding Command="commands:EditorCommands.Replace" CanExecute="CanExecuteReplace"
+                        Executed="ExecuteReplace" />
+        <CommandBinding Command="commands:EditorCommands.DeleteLine" CanExecute="CanExecuteDeleteLine"
+                        Executed="ExecuteDeleteLine" />
+        <CommandBinding Command="commands:EditorCommands.GoTo" CanExecute="CanExecuteGoTo" Executed="ExecuteGoTo" />
+        <CommandBinding Command="commands:EditorCommands.InsertDate" CanExecute="CanExecuteInsertDate"
+                        Executed="ExecuteInsertDate" />
 
-        <CommandBinding Command="commands:EditorCommands.Font"  CanExecute="CanExecuteFont" Executed="ExecuteFont"/>
+        <CommandBinding Command="commands:EditorCommands.Font" CanExecute="CanExecuteFont" Executed="ExecuteFont" />
 
-        <CommandBinding Command="commands:EditorCommands.ZoomIn"  CanExecute="CanExecuteZoomIn" Executed="ExecuteZoomIn"/>
-        <CommandBinding Command="commands:EditorCommands.ZoomOut"  CanExecute="CanExecuteZoomOut" Executed="ExecuteZoomOut"/>
-        <CommandBinding Command="commands:EditorCommands.Zoom100"  CanExecute="CanExecuteZoom100" Executed="ExecuteZoom100"/>
+        <CommandBinding Command="commands:EditorCommands.ZoomIn" CanExecute="CanExecuteZoomIn" Executed="ExecuteZoomIn" />
+        <CommandBinding Command="commands:EditorCommands.ZoomOut" CanExecute="CanExecuteZoomOut"
+                        Executed="ExecuteZoomOut" />
+        <CommandBinding Command="commands:EditorCommands.Zoom100" CanExecute="CanExecuteZoom100"
+                        Executed="ExecuteZoom100" />
 
-        <CommandBinding Command="commands:EditorCommands.Print"  CanExecute="CanExecutePrint" Executed="ExecutePrint"/>
+        <CommandBinding Command="commands:EditorCommands.Print" CanExecute="CanExecutePrint" Executed="ExecutePrint" />
 
     </UserControl.CommandBindings>
     <TextBox x:Name="TextBox1"
-                 AcceptsReturn="True"
-                 AllowDrop="True"
-                 AcceptsTab="True"
-                 Text=""
-                 VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
-                 Focusable="True"
-                 TextWrapping="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsWordWrapChecked, Mode=OneWay, Converter={StaticResource BoolTextWrappingConverter}}"
-                 SpellCheck.IsEnabled="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsSpellCheckingChecked, Mode=TwoWay}"
-        >
-      
+             AcceptsReturn="True"
+             AllowDrop="True"
+             AcceptsTab="True"
+             Text=""
+             VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
+             Focusable="True"
+             TextWrapping="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsWordWrapChecked, Mode=OneWay, Converter={StaticResource BoolTextWrappingConverter}}"
+             SpellCheck.IsEnabled="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsSpellCheckingChecked, Mode=TwoWay}">
+
         <!-- TextWrapping="{Binding TextWrapping}"-->
         <TextBox.Style>
             <Style TargetType="TextBox">
-                <Setter Property="VerticalScrollBarVisibility" Value="Visible"/>
+                <Setter Property="VerticalScrollBarVisibility" Value="Visible" />
                 <Style.Triggers>
                     <Trigger Property="IsFocused" Value="True">
-                        <Setter Property="SelectionOpacity" Value="0.4"/>
+                        <Setter Property="SelectionOpacity" Value="0.4" />
                     </Trigger>
                     <Trigger Property="IsFocused" Value="False">
-                        <Setter Property="SelectionOpacity" Value="0.3"/>
+                        <Setter Property="SelectionOpacity" Value="0.3" />
                     </Trigger>
                 </Style.Triggers>
             </Style>
