--- a/VisualCrypt.Desktop/Views/SetPassword.xaml
+++ b/VisualCrypt.Desktop/Views/SetPassword.xaml
@@ -1,19 +1,27 @@
 ﻿<Window x:Class="VisualCrypt.Desktop.Views.SetPassword"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Set Password" Height="165.147" Width="320.932" WindowStartupLocation="CenterOwner">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
+        mc:Ignorable="d"
+        Title="Set Password" Height="165.147" Width="320.932" WindowStartupLocation="CenterOwner"
+        d:DataContext="{d:DesignInstance views:SetPassword}">
     <Grid>
         <StackPanel Margin="0">
             <TextBlock Margin="3">Password:</TextBlock>
-            <PasswordBox Name="pwBox" PasswordChanged="Password_Changed" Margin="3" />
+            <PasswordBox Name="PwBox" PasswordChanged="Password_Changed" Margin="3" x:FieldModifier="private" />
             <TextBlock Margin="3">Password (repeat):</TextBlock>
-            <PasswordBox Name="pwBox2" PasswordChanged="Password2_Changed" Margin="3" />
-            <DockPanel  HorizontalAlignment="Stretch">
-                <Button DockPanel.Dock="Left"  HorizontalAlignment="Right" Width="65"  Command="{Binding ClearPasswordCommand}">Clear
+            <PasswordBox Name="PwBox2" PasswordChanged="Password2_Changed" Margin="3" x:FieldModifier="private" />
+            <DockPanel HorizontalAlignment="Stretch">
+                <Button DockPanel.Dock="Left" HorizontalAlignment="Right" Width="65"
+                        Command="{Binding ClearPasswordCommand}">
+                    Clear
                 </Button>
-              
-                <Button DockPanel.Dock="Right"  HorizontalAlignment="Right" Width="65" Click="Button_Click">Cancel</Button>
-                <Button x:Name="ButtonOk" DockPanel.Dock="Right" IsDefault="True" HorizontalAlignment="Right" Width="65"
+
+                <Button DockPanel.Dock="Right" HorizontalAlignment="Right" Width="65" Click="Button_Click">Cancel</Button>
+                <Button x:Name="ButtonOk" DockPanel.Dock="Right" IsDefault="True" HorizontalAlignment="Right"
+                        Width="65"
                         Command="{Binding SetPasswordCommand}">
                     Set
                 </Button>
