new look of the main window

--- a/MahApps.Metro/Themes/MetroWindow.xaml
+++ b/MahApps.Metro/Themes/MetroWindow.xaml
@@ -297,7 +297,7 @@
                                VerticalAlignment="Center"
                                Margin="8 -1 0 0"
                                FontSize="{DynamicResource WindowTitleFontSize}"
-                               FontFamily="{DynamicResource HeaderFontFamily}" />
+                               FontFamily="{DynamicResource DefaultFont}" />
                 </DataTemplate>
             </Setter.Value>
         </Setter>
