--- a/VisualCrypt.Desktop/Views/AboutDialog.xaml
+++ b/VisualCrypt.Desktop/Views/AboutDialog.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="VisualCrypt.Desktop.Views.About"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-        mc:Ignorable="d"
-        Title="About" Height="262" Width="433.932" WindowStartupLocation="CenterOwner"
-        d:DataContext="{d:DesignInstance views:About}">
-    <Grid d:DataContext="{d:DesignInstance  views:About}">
+﻿<controls:MetroWindow x:Class="VisualCrypt.Desktop.Views.AboutDialog"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
+                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      mc:Ignorable="d"
+                      Title="AboutDialog" Height="262" Width="433.932" WindowStartupLocation="CenterOwner"
+                      d:DataContext="{d:DesignInstance views:AboutDialog}">
+    <Grid d:DataContext="{d:DesignInstance  views:AboutDialog}">
         <DockPanel Margin="20">
             <StackPanel DockPanel.Dock="Top">
                 <StackPanel Orientation="Horizontal">
@@ -32,4 +33,4 @@
 
         </DockPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
