--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="VisualCrypt.Desktop.Views.SetPassword"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-        mc:Ignorable="d"
-        Title="Set Password" Height="165.147" Width="320.932" WindowStartupLocation="CenterOwner"
-        d:DataContext="{d:DesignInstance views:SetPassword}">
+﻿<controls:MetroWindow x:Class="VisualCrypt.Desktop.Views.SetPasswordDialog"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
+                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      mc:Ignorable="d"
+                      Title="Set Password" Height="165.147" Width="320.932" WindowStartupLocation="CenterOwner"
+                      d:DataContext="{d:DesignInstance views:SetPasswordDialog}">
     <Grid>
         <StackPanel Margin="0">
             <TextBlock Margin="3">Password:</TextBlock>
@@ -28,4 +29,4 @@
             </DockPanel>
         </StackPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
