--- a/VisualCrypt.Desktop/Views/ShellWindow.xaml
+++ b/VisualCrypt.Desktop/Views/ShellWindow.xaml
@@ -1,20 +1,62 @@
-﻿<Window x:Class="VisualCrypt.Desktop.Views.Shell"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:regions="http://www.codeplex.com/CompositeWPF"
-        xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-        xmlns:shared="clr-namespace:VisualCrypt.Desktop.Shared;assembly=VisualCrypt.Desktop.Shared"
-        xmlns:commands="clr-namespace:VisualCrypt.Desktop.Shared.Commands;assembly=VisualCrypt.Desktop.Shared"
-        xmlns:state="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
-        xmlns:files="clr-namespace:VisualCrypt.Desktop.Shared.Files;assembly=VisualCrypt.Desktop.Shared"
-        mc:Ignorable="d"
-        Title="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=Filename}" Height="350" Width="805"
-        WindowStartupLocation="CenterScreen"
-        d:DataContext="{d:DesignInstance views:ShellViewModel}"
-        AllowDrop="True"
-        Icon="/VisualCrypt;component/Images/WindowIcon.png">
+﻿<controls:MetroWindow x:Class="VisualCrypt.Desktop.Views.ShellWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:regions="http://www.codeplex.com/CompositeWPF"
+                      xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
+                      xmlns:shared="clr-namespace:VisualCrypt.Desktop.Shared;assembly=VisualCrypt.Desktop.Shared"
+                      xmlns:commands="clr-namespace:VisualCrypt.Desktop.Shared.Commands;assembly=VisualCrypt.Desktop.Shared"
+                      xmlns:state="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
+                      xmlns:files="clr-namespace:VisualCrypt.Desktop.Shared.Files;assembly=VisualCrypt.Desktop.Shared"
+                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      mc:Ignorable="d"
+                      Background="#F0FFFFFF"
+                      Title="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=Filename}"
+                      Height="350" Width="805"
+                      WindowStartupLocation="CenterScreen"
+                      d:DataContext="{d:DesignInstance views:ShellViewModel}"
+                      AllowDrop="True"
+                      TitleCaps="False"
+                      ResizeMode="CanResizeWithGrip"
+                      TitlebarHeight="30"
+                      Icon="/VisualCrypt;component/Images/WindowIcon.png">
+
+    <controls:MetroWindow.Resources>
+        <Ellipse x:Key="AppThemeMenuIcon"
+                 x:Shared="False"
+                 Width="16"
+                 Height="16"
+                 StrokeThickness="1"
+                 Stroke="{Binding BorderColorBrush, Mode=OneWay}"
+                 Fill="{Binding ColorBrush, Mode=OneWay}" />
+        <Ellipse x:Key="AccentMenuIcon"
+                 x:Shared="False"
+                 Width="16"
+                 Height="16"
+                 Fill="{Binding ColorBrush, Mode=OneWay}" />
+        <Style x:Key="AppThemeMenuItemStyle"
+               TargetType="{x:Type MenuItem}"
+               BasedOn="{StaticResource MetroMenuItem}">
+            <Setter Property="Command"
+                    Value="{Binding ChangeAccentCommand}" />
+            <Setter Property="Icon"
+                    Value="{StaticResource AppThemeMenuIcon}" />
+            <Setter Property="Header"
+                    Value="{Binding Name, Mode=OneWay}" />
+        </Style>
+
+        <Style x:Key="AccentColorMenuItemStyle"
+               TargetType="{x:Type MenuItem}"
+               BasedOn="{StaticResource MetroMenuItem}">
+            <Setter Property="Command"
+                    Value="{Binding ChangeAccentCommand}" />
+            <Setter Property="Icon"
+                    Value="{StaticResource AccentMenuIcon}" />
+            <Setter Property="Header"
+                    Value="{Binding Name, Mode=OneWay}" />
+        </Style>
+    </controls:MetroWindow.Resources>
     <Window.InputBindings>
         <!-- File -->
         <KeyBinding Key="N" Modifiers="Control" Command="{Binding NewCommand}" />
@@ -45,7 +87,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Menu Grid.Row="0" FontFamily="Segoe UI">
+        <Menu Grid.Row="0" FontFamily="Segoe UI" Height="Auto">
             <MenuItem Header="_File">
                 <MenuItem Header="_New" Command="{Binding NewCommand}" InputGestureText="Ctrl+N" />
                 <MenuItem Header="_Open..." Command="{Binding OpenCommand}" InputGestureText="Ctrl+O" />
@@ -113,11 +155,19 @@
                               IsChecked="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsZoom100Checked, Mode=OneWay}"
                               Command="commands:EditorCommands.Zoom100" />
                 </MenuItem>
+                <MenuItem Header="_Colors">
+                    <MenuItem Header="Theme"
+                              ItemsSource="{Binding AppThemes, Mode=OneWay}"
+                              ItemContainerStyle="{StaticResource AppThemeMenuItemStyle}" />
+                    <MenuItem Header="Accent"
+                              ItemsSource="{Binding AccentColors, Mode=OneWay}"
+                              ItemContainerStyle="{StaticResource AccentColorMenuItemStyle}" />
+                </MenuItem>
             </MenuItem>
 
             <MenuItem Header="_Help">
                 <MenuItem Header="View _Help Online" Command="{Binding HelpCommand}" InputGestureText="F1" />
-                <MenuItem Header="_About VisualCrypt Notepad" Command="{Binding AboutCommand}"
+                <MenuItem Header="_AboutDialog VisualCrypt Notepad" Command="{Binding AboutCommand}"
                           InputGestureText="Shift+F1" />
                 <MenuItem Header="Application _Log" Command="{Binding LogCommand}" InputGestureText="Shift+A" />
             </MenuItem>
@@ -159,4 +209,4 @@
                    Visibility="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=IsDirty, Converter={StaticResource BoolVisibilityConverter}}" />
         </DockPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
