--- a/VisualCrypt.Desktop/Views/ShellWindow.xaml
+++ b/VisualCrypt.Desktop/Views/ShellWindow.xaml
@@ -145,7 +145,7 @@
                         VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
         <Button Grid.Row="1" Height="0" Width="0" HorizontalAlignment="Left" x:Name="Button1" MinHeight="0"
                 MinWidth="0" />
-        <DockPanel Grid.Row="2" Width="Auto" Height="20"
+        <DockPanel Grid.Row="2" Width="Auto" Height="20" Background="{DynamicResource BarColorBrush}"
                    Visibility="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsStatusBarChecked, Converter={StaticResource BoolVisibilityConverter}}">
             <DockPanel.Resources>
                 <Style x:Key="X" TargetType="TextBlock">
